@@ -5,6 +5,7 @@ Changes in 3.1.2
 * FIX: Improve reliability of afpd child handler
 * FIX: debian initscript: add 0 and 6 to Default-Stop. debian-bug#745520
 * FIX: put the Solaris share reservation after our locking stuff, bug #560.
+* UPD: Improve Linux quota behaviour
 
 Changes in 3.1.1
 ================
